#	$Id$	

Changelog since HylaFAX 4.3.3

* Added the complete debian/ directory in order to create official
  Debian packages (17 Mar 2007)
* Compensate for 1728 pixel data when they DCS signalled differently (13 Mar 2007)
* Improve Class 1 handling when prologue frames fail after EOM (13 Mar 2007)
* Improve and extend JPEG parsing (13 Mar 2007)
* Restrict the usage of sending EOR, even when using MH and MR (13 Mar 2007)
* Fix send buffer when transmitting non-ECM data with a non-zero
  scanline-time value (13 Mar 2007)
* Flush modem input after NO CARRIER result in Class 1 Phase C send (13 Mar 2007)
* Improve sender-side RNR/RR flow control interaction (13 Mar 2007)
* Don't fallback to V.17 speeds on TCF retransmisions (13 Mar 2007)
* Prevent picking up again on the receiver's MCF signal when
  re-entering Phase B in a batch (13 Mar 2007)
* Force ECM when using V.8 (13 Mar 2007)
* Recognize DTMF as caller id when waiting for rings (13 Mar 2007)
* Use DLE+DTX to help reseting when stuck in transmit (13 Mar 2007)
* Add DTMF handling during call (12 Mar 2007)
* Logging instances where a sender transmits PPS again after our fourth PPR
  signal (12 Mar 2007)
* when dealing with JBIG/JPEG send PPR if we detect no frames
  received but we're still missing the last frame (12 Mar 2007)
* Bug 811: children should exit with _exit() (12 Mar 2007)
* Handle instances where ECM is negotiated but the sender
  transmits non-ECM data and signalling (12 Mar 2007)
* Handle MPS/EOP/EOM/CRP when expecting DCS, i.e. after RTN
* Log correctly when a receiver DIS indicates no V.8 bit but
  V.8 was already known to have succeeded (12 Mar 2007)
* Add more intelligence to the Class 1 receiver in sending RTN (12 Mar 2007)
* Restart Class 1 TCF reception timer after zeros start
* Handle +FCERROR after most +FRH=3 commands (12 Mar 2007)
* We can't rely on the timeout value to know if CONNECT has been seen (12 Mar 2007)
* Calculate PPM/PPS waiter instead of using T1