@@ -2,6 +2,7 @@
 
 Changelog since HylaFAX 4.3.3
 
+* Email raw TIFF files with the correct MIME type of image/tiff (23 Mar 2007)
 * Added the complete debian/ directory in order to create official
   Debian packages (17 Mar 2007)
 * Compensate for 1728 pixel data when they DCS signalled differently (13 Mar 2007)
